# coauthor.nvim

./: README.md
lua/coauthor/: config.lua  init.lua  request.lua
plugin/: coauthor.vim
server/: .env  .gitignore  pyproject.toml  server.py
